kubernetes-networks/canary/web-canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "is"
spec:
  rules:
  - host: nginx-ingress.local
    http:
      paths:
      - path: /prod
        backend:
          serviceName: web-canary-svc
          servicePort: 8000
