kubernetes-networks/canary/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx-ingress.local
    http:
      paths:
      - path: /prod
        backend:
          serviceName: web-svc
          servicePort: 8000
